test/tests/operators/from_kafka/iam/error_conflicting_sasl_mechanism.txt
error: conflicting `sasl.mechanism`: `PLAIN` but `aws_iam` requires `OAUTHBEARER`
  --> tests/operators/from_kafka/iam/error_conflicting_sasl_mechanism.tql:13:20
   |
13 |            options={
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
   |
